# gOdoo

./: .codecovrc  .env.sample  .eslintignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierrc.yml  AGENTS.md  Dockerfile  ODOO_MANIFEST.yml  README.md  docker-compose.base.yml  docker-compose.devcontainer.yml  docker-compose.traefik.yml  full.code-workspace  godoo_src.code-workspace  makefile  odoo_manifest.yml  odoo_repospec.yml  pyproject.toml  readme.md  requirements.dev.txt  requirements.txt
.devcontainer/: .gitignore  devcontainer.json  requirements.txt
.github/: FUNDING.yml
.github/workflows/: README.md  docker.yml  quality.yml  version-bump.yml  version-publish.yml  version-tag.yml
addons/: .gitkeep
addons/godoo_test_succ_mod/: __init__.py  __manifest__.py
addons/godoo_test_succ_mod/models/: __init__.py
addons/godoo_test_succ_mod/tests/: __init__.py  data.py  test_succ.py
addons/openwodoo_test_succ_mod/: __manifest__.py
addons/openwodoo_test_succ_mod/models/: __init__.py
config/: nginx-proxy_headers.conf  nginx.conf  postgresql.conf  supervisord.conf
docker/: Dockerfile  depends_build.sh  depends_runtime.sh  docker-compose.base.yml  docker-compose.devcontainer-traefik.yml  docker-compose.devcontainer.yml  docker-compose.traefik.yml  install_wkhtmltopdf.sh
docker/cups/: Dockerfile  Dockerfile.cups  cups_entrypoint.sh
docker/cups/config/: cups-pdf.conf  cupsd.conf
odoo_import_scripts/: install_enterprise.py
open_wodoo/: __main__.py  bootstrap.py  cli.py  helper_odoo_files.py  rpc.py  test.py  update.py
open_wodoo/commands/: __init__.py  bootstrap.py  launch.py  makedev.py  source_get.py  test.py  update.py
open_wodoo/commands/rpc/: __init__.py  cli.py  importer.py  modules.py  translations.py
open_wodoo/git/: __init__.py  git_odoo.py  git_odoo_addons.py  git_repo.py  git_url.py  zip_download.py
open_wodoo/helpers/: __init__.py  cli.py  odoo_files.py  repospec.py
scripts/: bash_completion  container_requirements.sh  dump_postgres.sh  fix_poetry_perms.sh  launchodoo.sh  reset_devcontainer.sh  zsh_completion
scripts/migrations/development/: add_banner.py  shrink_database.py
scripts_rpc/: add_staging_banner.py  disable_audit_logs.py
sql/: .gitignore
sql/postgres_init_d/: .gitignore
src/godoo/: __main__.py
src/godoo/commands/: launch.py  shell.py
src/godoo/commands/rpc/: importer.py  modules.py
src/godoo/git/: git_odoo_addons.py  zip_download.py
src/godoo/helpers/: __init__.py  odoo_files.py  repospec.py
src/godoo_cli/: __about__.py  __init__.py  __main__.py  cli.py  cli_common.py
src/godoo_cli/commands/: __init__.py  bootstrap.py  config.py  launch.py  makedev.py  shell.py  source_get.py  test.py
src/godoo_cli/commands/backup/: __init__.py  cli.py  dump.py  load.py  pull.py  util.py
src/godoo_cli/commands/db/: __init__.py  cli.py  clone.py  connection.py  ops.py  passwords.py  query.py  reset.py
src/godoo_cli/commands/odoo_bin/: __init__.py  bootstrap.py  cli_generate.py  launch.py  shell.py
src/godoo_cli/commands/odoo_bin/godoo_test/: __init__.py  cli.py  load_data.py  run.py  test_run.py
src/godoo_cli/commands/odoo_bin/shell_scripts/: odoo_banner.py  pregenerate_assets.py  render_report.py
src/godoo_cli/commands/odoo_bin/test/: test_load_data.py
src/godoo_cli/commands/rpc/: __init__.py  cli.py  cli_callbacks.py  config_parameters.py  importer.py  modules.py  translations.py
src/godoo_cli/commands/shell/: shell.py
src/godoo_cli/commands/shell/scripts/: odoo_banner.py
src/godoo_cli/commands/source/: __init__.py  addon_archives.py  odoo_conf.py
src/godoo_cli/commands/test/: __init__.py  cli.py  test_launch.py  test_load_data.py  test_run.py
src/godoo_cli/git/: __init__.py  git_odoo.py  git_odoo_addons.py  git_repo.py  git_url.py  zip_download.py
src/godoo_cli/helpers/: __init__.py  bootstrap.py  cli.py  modules.py  modules_git.py  modules_py.py  odoo_files.py  odoo_manifest.py  pip.py  system.py
src/godoo_cli/models/: __init__.py  db_connection.py  godoo_git_repo.py  godoo_manifest.py  godoo_models.py  godoo_modules.py
src/tests/: test_git_clone.py  test_odoo_config_generation.py
wodoo/: __main__.py  helper.py  helper_cli.py  helper_git.py  launch.py  makedev.py  shell.py  test.py  update.py
